@@ -3,7 +3,7 @@
 # generate the file "configure", which is run during Tk installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.62 2005/12/08 20:25:42 hobbs Exp $
+# RCS: @(#) $Id: configure.in,v 1.63 2006/05/04 14:11:51 dgp Exp $
 
 AC_INIT(../generic/tk.h)
 AC_PREREQ(2.59)
@@ -16,7 +16,7 @@ SHELL=/bin/sh
 TK_VERSION=8.5
 TK_MAJOR_VERSION=8
 TK_MINOR_VERSION=5
-TK_PATCH_LEVEL="a4"
+TK_PATCH_LEVEL="a5"
 VER=$TK_MAJOR_VERSION$TK_MINOR_VERSION
 
 #------------------------------------------------------------------------
